Fix meta alignment

--- a/styles/imdone-atom.less
+++ b/styles/imdone-atom.less
@@ -216,6 +216,9 @@
               word-break: break-word;
               td {
                 padding: 3px;
+                &:nth-child(n+2) {
+                  text-align: right;
+                }
               }
             }
           }
